btsync (1.4.1-0) unstable; urgency=low

  * Removed check for mandatory disablement of misinterpreted
    "check_for_updates" setting (Closes #170)
  * Fixed redundant restart messages (Closes #166)

 -- Leo Moll <leo.moll@yeasoft.com>  Sat, 06 Dec 2014 11:33:11 +0100

btsync (1.4.0-4) unstable; urgency=low

  * Fixed folder_defaults.known_hosts filter (Closes #156)

 -- Leo Moll <leo.moll@yeasoft.com>  Fri, 05 Sep 2014 14:56:23 +0200

btsync (1.4.0-3) unstable; urgency=low

  * Added debconf support for new advanced settings (Closes #150)
    - folder_defaults.known_hosts
    - peer_expiration_days
    - directory_root
  * Fixed broken Simplified Chinese translation (Closes #152)
  * Fixed and improved service stop behaviour (Closes #149)

 -- Leo Moll <leo.moll@yeasoft.com>  Tue, 04 Sep 2014 22:58:10 +0200

btsync (1.4.0-2) unstable; urgency=low

  * Fixed installation error on systems with no configured
    default instance (Closes #147)

 -- Leo Moll <leo.moll@yeasoft.com>  Tue, 02 Sep 2014 12:41:13 +0200

btsync (1.4.0-1) unstable; urgency=low

  * Add support for BitTorrent Sync 1.4
    - Add support for SSL certificates (Closes #144)
    - Add support for folder default settings (Closes #145)
  * Fixed storage_path in order to allow sybolic linking (Closes #140)
  * Streamlined configuration data between configuration file and
    Web UI (Closes #142)
  * Removed deprecated setting lan_use_tcp (Closes #143)

 -- Leo Moll <leo.moll@yeasoft.com>  Mon, 01 Sep 2014 12:00:00 +0200

btsync (1.3.1-1) unstable; urgency=low

  * Fixed access to several files in the storage path (Closes #122)
  * Updated spanish translation
  * Added support for post-installation triggers
  * Added support for bind-shim (Closes #94)
  
 -- Leo Moll <leo.moll@yeasoft.com>  Tue, 08 Apr 2014 13:47:10 +0200

btsync (1.3.0-1) unstable; urgency=low

  * Added support for the new 1.3 advanced settings (Closes #120)
 
 -- Leo Moll <leo.moll@yeasoft.com>  Thu, 03 Apr 2014 14:14:58 +0200
