@@ -104,7 +104,31 @@ config_debug () {
 	fi
 }
 
-config_from_conffile () {
+conffile_from_confdir () {
+	# $1 : config directory
+	CONFIG_FILE=$(basename "$1" ".d")
+	if [ -d "$1" ]; then
+		( cat << EOFF
+//!/usr/lib/btsync/btsync-daemon --config
+//
+// Autogenerated BitTorrent Sync configuration file
+// generated from parts in $1
+//
+// DO NOT EDIT THIS FILE MANUALLY - SERIOUSLY!!!
+//
+// THIS FILE WILL BE OVERWRITTEN AT EVERY START
+EOFF
+		) > "${CONFIG_DIR}/${CONFIG_FILE}"
+		for COMPONENT in $(find "$1" -maxdepth 1 -type f | sort); do
+			cat "${COMPONENT}" >> "${CONFIG_DIR}/${CONFIG_FILE}"
+		done
+	fi
+	credentials_from_conffile "${CONFIG_FILE}"
+	chown ${CRED_UID}:${CRED_GID} "${CONFIG_DIR}/${CONFIG_FILE}"
+	chmod 400 "${CONFIG_DIR}/${CONFIG_FILE}"
+}
+
+credentials_from_conffile () {
 	# $1 : config file
 	BASENAME=${1%%.*${CONFIG_EXT}}
 	# old method: credentials encoded into the filename
@@ -131,6 +155,11 @@ config_from_conffile () {
 	fi
 	CRED_UID=${CRED_UID:-root}
 	CRED_GID=${CRED_GID:-root}
+}
+
+config_from_conffile () {
+	# $1 : config file
+	credentials_from_conffile "$1"
 	# umask encoded in comments in the config file
 	UMASK=$(grep 'DAEMON_UMASK[ \t]*=' ${CONFIG_DIR}/$1 | cut -d= -f 2 | sed -e "s/ //g" -e "s/\t//g")
 	UMASK=$(expr match "${UMASK}" '\([0-7]\{1,4\}\)')
@@ -401,6 +430,10 @@ stop_btsync () {
 
 case "$1" in
 start)
+	# create config files from components
+	for COMPO in $(find "${CONFIG_DIR}" -maxdepth 1 -type d -name '*.'${CONFIG_EXT}'.d'); do
+		conffile_from_confdir "${COMPO}"
+	done
 	# autostart btsync instances
 	if [ -z "$2" ]; then
 		# check if automatic startup is disabled by AUTOSTART=none
