@@ -3,6 +3,7 @@ btsync (1.4.1-0) unstable; urgency=low
   * Removed check for mandatory disablement of misinterpreted
     "check_for_updates" setting (Closes #170)
   * Fixed redundant restart messages (Closes #166)
+  * Added support for modular configuration files (Closes #124)
 
  -- Leo Moll <leo.moll@yeasoft.com>  Sat, 06 Dec 2014 11:33:11 +0100
 
